Updated the way Providers are provided and started implementation of the actual matching algorithm